Time: 25 ms (63.02%) | Memory: 46.2 MB (19.29%) - LeetSync